--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = {extras = ["standard"], version = "0.24.0.post1"}
 sqlalchemy = "2.0.23"
 alembic = "1.13.0"
 asyncpg = "0.29.0"
+pydantic = {extras = ["email"], version = "2.5.2"}
 
 
 [build-system]
