--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ sqlalchemy = "2.0.23"
 alembic = "1.13.0"
 asyncpg = "0.29.0"
 pydantic = {extras = ["email"], version = "2.5.2"}
+passlib = {extras = ["bcrypt"], version = "1.7.4"}
+python-jose = "3.3.0"
+libgravatar = "1.0.4"
+python-multipart = "0.0.6"
 
 
 [build-system]
