--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-jose = "3.3.0"
 libgravatar = "1.0.4"
 python-multipart = "0.0.6"
+fastapi-users = {extras = ["sqlalchemy"], version = "12.1.2"}
 
 
 [build-system]
