--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-jose = "3.3.0"
 libgravatar = "1.0.4"
 python-multipart = "0.0.6"
 fastapi-users = {extras = ["sqlalchemy"], version = "12.1.2"}
+fastapi-mail = "1.4.1"
 
 
 [build-system]
