--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ libgravatar = "1.0.4"
 python-multipart = "0.0.6"
 fastapi-users = {extras = ["sqlalchemy"], version = "12.1.2"}
 fastapi-mail = "1.4.1"
+fastapi-limiter = "0.1.5"
 
 
 [build-system]
