--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-multipart = "0.0.6"
 fastapi-users = {extras = ["sqlalchemy"], version = "12.1.2"}
 fastapi-mail = "1.4.1"
 fastapi-limiter = "0.1.5"
+redis = "4.6.0"
 
 
 [build-system]
