--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,18 @@ cloudinary = "1.37.0"
 [tool.poetry.group.dev.dependencies]
 sphinx = "7.2.6"
 
+[tool.poetry.group.test.dependencies]
+pytest-cov = "4.1.0"
+httpx = "0.26.0"
+pytest-asyncio = "0.23.3"
+pytest = "7.4.4"
+aiosqlite = "0.19.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
+filterwarnings = "ignore::DeprecationWarning"
